# Convex-hull

./: CMakeLists.txt  README.md  andrew_jarvis.cpp  andrew_jarvis.h  base_class.h  button.cpp  button.h  convex_hull.cpp  convex_hull.h  delaunay.cpp  delaunay.h  fortune.cpp  fortune.h  graham.cpp  graham.h  graphics.cpp  graphics.h  input_field.cpp  input_field.h  kirkpatrick.cpp  kirkpatrick.h  line.cpp  line.h  main.cpp  point.cpp  point.h  points.txt  points_set.cpp  points_set.h  reader.cpp  reader.h  scene_state.cpp  scene_state.h  triangle.cpp  triangle.h
